Adding content for team members

--- a/templates/HFC/about.html
+++ b/templates/HFC/about.html
@@ -39,80 +39,58 @@
                         individuals, focused on solving <b>specific problem statements</b> proposed by social and
                         governmental organisations, using *emerging technologies*.
                     </p>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-                        labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
-                        laboris nisi ut aliquip ex ea commodo consequat.Duis aute irure dolor in reprehenderit in
-                        voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat
-                        non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-                        labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
-                        laboris nisi ut aliquip ex ea commodo consequat.Duis aute irure dolor in reprehenderit in
-                        voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat
-                        non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-                        labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
-                        laboris nisi ut aliquip ex ea commodo consequat.Duis aute irure dolor in reprehenderit in
-                        voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat
-                        non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                    <p>
+                        
+                    </p>
                 </div>
                 <div class="about-team">
                     <h2 class="underline">Meet Our Team</h2>
                     <div class="about-team__outer">
                         <div class="about-team__sec">
                             <div class="about-team__fig">
-                                <img src="{% static 'images/srini-image.png' %}" alt="Pic">
+                                <img src="{% static 'images/srini.png' %}" alt="Pic">
                             </div>
                             <div class="about-team__info">
                                 <h4>Srinivas Aki <span>Program Director</span></h4>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
-                                    incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
-                                    exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.Duis </p>
+                                <p>Leads the complete hackforchange, including its vision, outreach and program execution</p>
                             </div>
                         </div>
                         <div class="about-team__sec">
                             <div class="about-team__fig">
-                                <img src="{% static 'images/team-men-aki.jpg' %}" alt="Pic">
+                                <img src="{% static 'images/durga.png' %}" alt="Durga Raghavapurapu">
                             </div>
                             <div class="about-team__info">
-                                <h4>Srinivas Aki <span>Executive Director</span></h4>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
-                                    incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
-                                    exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.Duis </p>
+                                <h4>Durga Raghavapurapu <span>Engineering Lead</span></h4>
+                                <p>Leads the development effort, along with community of developers from cities and colleges</p>
                             </div>
                         </div>
                     </div>
                     <div class="about-team__outer about-team__outer--third">
                         <div class="about-team__sec">
                             <div class="about-team__fig">
-                                <img width="100" src="{% static 'images/team-men-aki.jpg' %}" alt="Pic">
+                                <img width="100" src="{% static 'images/sambit.png' %}" alt="Sambit Mohanty">
                             </div>
                             <div class="about-team__info">
-                                <h4>Srinivas Aki <span>Executive Director</span></h4>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
-                                    incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
-                                    exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.Duis </p>
+                                <h4>Sambit Mohanty<span>Engineering</span></h4>
+                                <p>Leads the core hack for change platform development, along with contributions from the community </p>
                             </div>
                         </div>
                         <div class="about-team__sec">
                             <div class="about-team__fig">
-                                <img width="100" src="{% static 'images/team-men-aki.jpg' %}" alt="Pic">
+                                <img width="100" src="{% static 'images/saurabh.png' %}" alt="Saurabh Kumar">
                             </div>
                             <div class="about-team__info">
-                                <h4>Srinivas Aki <span>Executive Director</span></h4>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
-                                    incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
-                                    exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.Duis </p>
+                                <h4>Saurabh Kumar<span>Engineering</span></h4>
+                                <p>Leads the development for projects launched on hackforchange platform</p>
                             </div>
                         </div>
                         <div class="about-team__sec">
                             <div class="about-team__fig">
-                                <img width="100" src="{% static 'images/team-men-aki.jpg' %}" alt="Pic">
+                                <img width="100" src="{% static 'images/shabana.png' %}" alt="Shabana Syed">
                             </div>
                             <div class="about-team__info">
-                                <h4>Srinivas Aki <span>Executive Director</span></h4>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
-                                    incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
-                                    exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.Duis </p>
+                                <h4>Shabana Syed <span>Visual Design</span></h4>
+                                <p>Leads the design effor for hack for change and all its outreach channels</p>
                             </div>
                         </div>
                     </div>
