--- a/templates/HFC/community.html
+++ b/templates/HFC/community.html
@@ -1,4 +1,5 @@
 {% extends 'HFC/layout.html' %}
+{% load static %}
 {% block meta_tags %}
 <meta content="" name="keywords">
 <meta property="og:title" content="">
