privacy policy page modified

--- a/templates/HFC/privacy_policy.html
+++ b/templates/HFC/privacy_policy.html
@@ -33,19 +33,19 @@
                 <p style="text-align:justify;text-justify:inter-word;">These Privacy Policy (“Privacy Policy”) apply to
                     the use of the website and products provided by Hack For Change (hereinafter also referred as “we”
                     or
-                    “us”). Our registered office is at Hyderabad.</p>
+                    “us”). Our registered office is at Hyderabad.</p><br>
                 <p style="text-align:justify;text-justify:inter-word;">This Privacy Policy applies and has effect in
                     respect of all services and other products, software, made available by us, as well as any other
-                    online features relating to the website and its content (the “Service(s)”).</p>
+                    online features relating to the website and its content (the “Service(s)”).</p><br>
                 <p style="text-align:justify;text-justify:inter-word;">If you have any questions or comments about this
-                    Privacy Policy, please contact us at contact@hackforchange.co.</p>
+                    Privacy Policy, please contact us at contact@hackforchange.co.</p><br>
                 <p style="text-align:justify;text-justify:inter-word;">We are committed to protecting and respecting
                     your privacy. The Privacy Policy explains the basis on which personal information we collect from
                     you will be processed by us or on our behalf. Where we decide the purpose or means for which
                     personal data you supply through these Services is processed, we are the “controller”. Where you
                     decide the purpose or means for which personal data you supply through these Services is processed,
                     you are the “controller”. We will comply with proper and applicable data protection laws, including
-                    the General Data Protection Regulation 2016/679.</p>
+                    the General Data Protection Regulation 2016/679.</p><br>
                 <p style="text-align:justify;text-justify:inter-word;">We encourage you to read this Privacy Policy
                     carefully as it contains important information about the following:</p>
                 <ul style="list-style-type:square;list-style-position: inside;">
@@ -53,7 +53,7 @@
                     <li>How we will use the information we collect about you;</li>
                     <li>Whether we will disclose your details to anyone else; and</li>
                     <li>Your choices and rights regarding the personal information you have provided to us.</li>
-                </ul>
+                </ul><br>
                 <p style="text-align:justify;text-justify:inter-word;">The Services may contain links to services owned
                     and operated by third parties. We may also use some third-parties software or products to provide
                     you with the Service properly. If we do so and provide third -parties of any personal data you can
@@ -101,7 +101,7 @@
                 <br>
                 <h2>7. Data sharing</h2>
                 <p style="text-align:justify;text-justify:inter-word;">We will share your information (including
-                    personal data) with third parties only in the ways that are described in this Privacy Policy.</p>
+                    personal data) with third parties only in the ways that are described in this Privacy Policy.</p><br>
                 <p style="text-align:justify;text-justify:inter-word;">Personnel, suppliers or subcontractors: We keep
                     your information confidential, but may disclose it to our personnel, suppliers or subcontractors
                     insofar as it is reasonably necessary for the purposes set out in this Privacy Policy. However, this
