--- a/templates/HFC/problem_discription.html
+++ b/templates/HFC/problem_discription.html
@@ -65,7 +65,7 @@
                 <div class="newsletter">
                     <div class="newsletter__fig"><img src="{% static 'images/news-update.png' %}" alt="Image"></div>
                     <form
-                            action="https://ctsc-india.us7.list-manage.com/subscribe/post?u=1a02ab21f5eb63b797a40e347&amp;id=72baea4f04"
+                            action="https://hackforchange.us7.list-manage.com/subscribe/post?u=d108098b91660a39ebfc4dd46&amp;id=878602ff9c"
                             method="post" target="_blank" id="mc-embedded-subscribe-form" class="newsletter__form"
                             novalidate>
                             <p class="large bold">Get Latest Updates!</p>
@@ -78,7 +78,7 @@
                         </form>
                         <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
                         <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text"
-                            name="b_1a02ab21f5eb63b797a40e347_72baea4f04" tabindex="-1" value=""></div>
+                            name="b_d108098b91660a39ebfc4dd46_878602ff9c" tabindex="-1" value=""></div>
                 </div>
             </aside><!--sidebar -->
         </div>
