--- a/templates/HFC/problem_statements.html
+++ b/templates/HFC/problem_statements.html
@@ -58,7 +58,7 @@
                <div class="newsletter">
                         <div class="newsletter__fig"><img src="{% static 'images/news-update.png' %}" alt="Image"></div>
                         <form
-                            action="https://ctsc-india.us7.list-manage.com/subscribe/post?u=1a02ab21f5eb63b797a40e347&amp;id=72baea4f04"
+                            action="https://hackforchange.us7.list-manage.com/subscribe/post?u=d108098b91660a39ebfc4dd46&amp;id=878602ff9c"
                             method="post" target="_blank" id="mc-embedded-subscribe-form" class="newsletter__form"
                             novalidate>
                             <p class="large bold">Get Latest Updates!</p>
@@ -71,7 +71,7 @@
                         </form>
                         <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
                         <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text"
-                                name="b_1a02ab21f5eb63b797a40e347_72baea4f04" tabindex="-1" value=""></div>
+                                name="b_d108098b91660a39ebfc4dd46_878602ff9c" tabindex="-1" value=""></div>
                 </div>
         </div>
     </div>
@@ -79,7 +79,5 @@
 </div>
 {% endblock %}
 {%block js%}
-<script type='text/javascript' src='//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js'></script>
-<script
-    type='text/javascript'>(function ($) { window.fnames = new Array(); window.ftypes = new Array(); fnames[0] = 'EMAIL'; ftypes[0] = 'email'; fnames[1] = 'FNAME'; ftypes[1] = 'text'; fnames[2] = 'LNAME'; ftypes[2] = 'text'; fnames[3] = 'ADDRESS'; ftypes[3] = 'address'; fnames[4] = 'PHONE'; ftypes[4] = 'phone'; fnames[5] = 'BIRTHDAY'; ftypes[5] = 'birthday'; }(jQuery)); var $mcj = jQuery.noConflict(true);</script>
+
 {%endblock%}
