--- a/templates/HFC/problem_statements_submit.html
+++ b/templates/HFC/problem_statements_submit.html
@@ -72,11 +72,21 @@
                 </div>
                 <div class="newsletter">
                     <div class="newsletter__fig"><img src="{% static 'images/news-update.png' %}" alt="Image"></div>
-                    <form action="#" class="newsletter__form">
-                        <p class="large bold">Get Latest Updates!</p>
-                        <input type="email" placeholder="Enter your email">
-                        <input class="btn btn--info" type="submit" value="Subscribe">
+                    <form
+                            action="https://hackforchange.us7.list-manage.com/subscribe/post?u=d108098b91660a39ebfc4dd46&amp;id=878602ff9c"
+                            method="post" target="_blank" id="mc-embedded-subscribe-form" class="newsletter__form"
+                            novalidate>
+                            <p class="large bold">Get Latest Updates!</p>
+                            <input type="email" placeholder="Enter your email" name="EMAIL" id="mce-EMAIL">
+                            <input class="btn btn--info" type="submit" value="Subscribe">
+                            <div id="mce-responses" class="clear">
+                                <div class="response" id="mce-error-response" style="display:none"></div>
+                                <div class="response" id="mce-success-response" style="display:none"></div>
+                            </div>
                     </form>
+                    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+                <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text"
+                    name="b_d108098b91660a39ebfc4dd46_878602ff9c" tabindex="-1" value=""></div>
                 </div>
             </aside>
             <!--sidebar -->
