change in settings

--- a/templates/HFC/community.html
+++ b/templates/HFC/community.html
@@ -37,7 +37,7 @@
             </li>
         </ul>
         <div class="hfc-outer">
-            <section id="hfcCentres">
+            <section class="active"  id="hfcCentres">
                 <div class="main main--community">
                     {% for center in hfc_centers %}
                     <div class="main__community-outer">
@@ -77,7 +77,7 @@
                     {% endfor %}
                 </div>
             </section>
-            <section class="active" id="hfcLeaderboard">
+            <section  id="hfcLeaderboard">
                 <div class="unborder-table__outer">
                     <table class="unborder-table">
                         <thead>
