--- a/templates/HFC/footer.html
+++ b/templates/HFC/footer.html
@@ -8,7 +8,7 @@
                 <p class="large bold">Subscribe to our newsletter</p>
             </div>
             <div class="subscription__right">
-                <form class="subscription__form" action="https://ctsc-india.us7.list-manage.com/subscribe/post"
+                <form class="subscription__form" action="https://hackforchange.us7.list-manage.com/subscribe/post"
                     method="POST" target="formaReturning">
                     <input type="hidden" name="u" value="d108098b91660a39ebfc4dd46">
                     <input type="hidden" name="id" value="878602ff9c">
