--- a/templates/HFC/problem_statements_with_issue_area.html
+++ b/templates/HFC/problem_statements_with_issue_area.html
@@ -35,7 +35,7 @@
                     <h4><a href="{% url 'problem_discription' prob_list.title_slug %}">{{prob_list.title}}</a></h4>
                     <div class="badge-sec"><strong>Submitted By : </strong><span
                             class="badge badge--yellow">{{prob_list.partner_id}}</span>
-                        <strong>Issue Area : </strong><span class="badge badge--pink"></span>{{prob_list.issue_area}}
+                        <strong>Issue Area : </strong><span class="badge badge--pink"></span><span style="text-transform: capitalize;">{{prob_list.issue_area}}</span>
                     </div>
                     <p>{{prob_list.summary}}</p>
                     <div class="badge-sec badge-sec__alt"><strong>Status : </strong><span
@@ -52,7 +52,7 @@
                     <ul>
                         {% for prob_list in all_problems %}
                         <li><a
-                                href="{% url 'problem_statements_with_issuearea' prob_list.issue_area_slug %}">{{prob_list.issue_area}}</a>
+                                href="{% url 'problem_statements_with_issuearea' prob_list.issue_area_slug %}" style="text-transform: capitalize;">{{prob_list.issue_area}}</a>
                         </li>
                         {% endfor %}
                     </ul>
