--- a/templates/andablog/entry_detail.html
+++ b/templates/andablog/entry_detail.html
@@ -14,9 +14,7 @@
 <meta name="description" content="{{ entry.title }}">
 <meta name="author" content="{{ entry.author.get_short_name }}">
 {% endblock %}
-
 {% block andablog_page_title %}
-
 {% endblock %}
 
 {% block andablog_content %}
@@ -26,17 +24,15 @@
 <div class="content-width">
     <div class="procuding">
         <h3>{{entry.title}} </h3>
-        <div class="proceedings-text">
+        <div class="proceedings-text" style="margin-bottom: 20px;">
             <div class="procuding-img bloge-img" id="profileImage"></div>
-            <div class="foucs bloge"><span
-                    id="firstName">{% if entry.author %}{{ entry.author|authordisplay }}{% endif %}</span><br>
-                {{entry.published_timestamp|date:"DATE_FORMAT" }}
+            <div class="foucs bloge"><span id="firstName">{% if entry.author %}{{ entry.author|authordisplay}}
+                    {%endif%}</span><br>{{entry.published_timestamp|date:"DATE_FORMAT" }}
             </div>
         </div>
         {% if entry.preview_image %}
         <div class="blog-main-img">
-            <a href="{{ entry.get_absolute_url }}"><img src="{{ entry.preview_image.url }} "
-                    alt="Preview image for {{ entry.title }}"></a>
+            <a href="{{ entry.get_absolute_url }}"><img src="{{ entry.preview_image.url }} " alt="Preview image for {{ entry.title }}"></a>
         </div>
         {% endif %}
     </div>
@@ -45,15 +41,9 @@
     </div>
 </div>
 
-
-
-
-
-
 {% include "andablog/comments_snippet.html" with comment_object=entry %}
-
-{% endblock %}
-{% endblock %}
+{%endblock%}
+{%endblock%}
 {% block css %}
 <style>
     #profileImage {
@@ -81,6 +71,5 @@
     });
     console.log(firstName)
 </script>
-
 
 {% endblock %}
