Privacy and terms page updated

--- a/templates/HFC/footer.html
+++ b/templates/HFC/footer.html
@@ -52,10 +52,10 @@
                 <div class="footer__menu">
                     <p class="small bold">Get In Touch</p>
                     <address>402 Abhis Hiranya <br>Kavuri Hills, Madhapur <br>Hyderabad - 500 033</address>
-                    <p><a href="mailto:contact@hackforchange.co"><i> <img width="24"
+                    <p><a href="mailto:contact@hackforchange.co.in"><i> <img width="24"
                                     src="{% static 'images/envelope-icon-w.svg' %}"
-                                    alt="icon"></i>contact@hackforchange.co</a></p>
-                    <p><a href="tel:+04090062872"><i><img width="19" src="{% static 'images/phone-icon-w.svg' %}"
+                                    alt="icon"></i>contact@hackforchange.co.in</a></p>
+                    <p><a href="tel:+91 99633 62872"><i><img width="19" src="{% static 'images/phone-icon-w.svg' %}"
                                     alt="icon"></i>+91 99633 62872</a></p>
                 </div>
             </div>
