--- a/templates/HFC/privacy_policy.html
+++ b/templates/HFC/privacy_policy.html
@@ -26,29 +26,29 @@
     <div class="content-width">
         <div class="main">
             <section id="contents">
+                <div class="blog-single">
 
-                <h1>Privacy Policy</h1><br>
-
-                <h2>1. Introduction</h2>
+                <h3>Privacy Policy</h3><br>
+                <div class="blog-single__content">
+                <h3>1. Introduction</h3>
                 <p style="text-align:justify;text-justify:inter-word;">These Privacy Policy (“Privacy Policy”) apply to
                     the use of the website and products provided by Hack For Change (hereinafter also referred as “we”
                     or
-                    “us”). Our registered office is at Hyderabad.</p><br>
-                <p style="text-align:justify;text-justify:inter-word;">This Privacy Policy applies and has effect in
+                    “us”). Our registered office is at Hyderabad.This Privacy Policy applies and has effect in
                     respect of all services and other products, software, made available by us, as well as any other
-                    online features relating to the website and its content (the “Service(s)”).</p><br>
-                <p style="text-align:justify;text-justify:inter-word;">If you have any questions or comments about this
-                    Privacy Policy, please contact us at contact@hackforchange.co.</p><br>
+                    online features relating to the website and its content (the “Service(s)”).</p>
+                <p>If you have any questions or comments about this
+                    Privacy Policy, please contact us at contact@hackforchange.co.in</p>
                 <p style="text-align:justify;text-justify:inter-word;">We are committed to protecting and respecting
                     your privacy. The Privacy Policy explains the basis on which personal information we collect from
                     you will be processed by us or on our behalf. Where we decide the purpose or means for which
                     personal data you supply through these Services is processed, we are the “controller”. Where you
                     decide the purpose or means for which personal data you supply through these Services is processed,
                     you are the “controller”. We will comply with proper and applicable data protection laws, including
-                    the General Data Protection Regulation 2016/679.</p><br>
+                    the General Data Protection Regulation 2016/679.</p>
                 <p style="text-align:justify;text-justify:inter-word;">We encourage you to read this Privacy Policy
                     carefully as it contains important information about the following:</p>
-                <ul style="list-style-type:square;list-style-position: inside;">
+                <ul style="list-style-type:square;list-style-position: inside;color: #706e6e;" >
                     <li>What information we may collect about you;</li>
                     <li>How we will use the information we collect about you;</li>
                     <li>Whether we will disclose your details to anyone else; and</li>
@@ -65,43 +65,40 @@
                 <p style="text-align:justify;text-justify:inter-word;">We may make changes to this Privacy Policy in the
                     future. You should check this page from time to time to ensure you are aware of any changes. Where
                     appropriate we may notify you of such changes.</p>
-                <br>
-                <h2>2. Information we may collect about you</h2>
+                <h3>2. Information we may collect about you</h3>
                 <p style="text-align:justify;text-justify:inter-word;">We collect and process the following information
-                    which may include your personal data.</p>
-                <p style="text-align:justify;text-justify:inter-word;">Your name, last name, email address, phone
+                    which may include your personal data.Your name, last name, email address, phone
                     number, contact data, device’s ID, your user preferences as well as all the data (including personal
                     data) you supply to us and information provided by you when using the Service or website.</p>
-                <br>
-                <h2>3. Collecting, processing and using personal data</h2>
+                <h3>3. Collecting, processing and using personal data</h3>
                 <p style="text-align:justify;text-justify:inter-word;">We only store and process your personal data when
                     you have voluntarily supplied us with it such as by filling in a contact form or signing up to the
                     Service. Your personal data will only be disclosed or otherwise transmitted if this is necessary to
                     implement the contract, render our Services or you have given your prior consent.</p>
-                <br>
-                <h2>4. Why we collect information about you - purpose of processing</h2>
+            
+                <h3>4. Why we collect information about you - purpose of processing</h3>
                 <p style="text-align:justify;text-justify:inter-word;">We will use information about you for delivering
                     our Services to you under the terms of use agreed between us. The processing of information in this
                     way is necessary for us to provide you the Service properly and to ensure the features function
                     properly so that you have the best Service possible.</p>
-                <br>
-                <h2>5. Log files</h2>
+                
+                <h3>5. Log files</h3>
                 <p style="text-align:justify;text-justify:inter-word;">During every access of our website user data is
                     transmitted by the respective Internet browser and stored in protocol files, the so-called server
                     log files. The datasets stored here may contain such data as date and time of access, name website,
                     IP address, referrer URL (original URL from which you arrived at the website), the amount of data
                     transmitted, product and version information of the browser used.</p>
-                <br>
-                <h2>6. Children personal data</h2>
+                
+                <h3>6. Children personal data</h3>
                 <p style="text-align:justify;text-justify:inter-word;">We do not collect personal information from
                     anyone under the age of {{ user_age }}. If you notice we collect and process personal data of anyone
                     under this age, please contact us. We encourage parents and legal guardians to monitor their
                     children’s Internet usage and to help enforce this Policy by instructing their children never to
                     provide personal information through the websites or Services.</p>
-                <br>
-                <h2>7. Data sharing</h2>
+                
+                <h3>7. Data sharing</h3>
                 <p style="text-align:justify;text-justify:inter-word;">We will share your information (including
-                    personal data) with third parties only in the ways that are described in this Privacy Policy.</p><br>
+                    personal data) with third parties only in the ways that are described in this Privacy Policy.</p>
                 <p style="text-align:justify;text-justify:inter-word;">Personnel, suppliers or subcontractors: We keep
                     your information confidential, but may disclose it to our personnel, suppliers or subcontractors
                     insofar as it is reasonably necessary for the purposes set out in this Privacy Policy. However, this
@@ -111,19 +108,17 @@
                     your information to the extent that we are required to do so by law (which may include to government
                     bodies and law enforcement agencies); in connection with any legal proceedings or prospective legal
                     proceedings; and in order to establish, exercise or defend our legal rights.</p>
-                <br>
-                <h2>8. Data transmission</h2>
+        
+                <h3>8. Data transmission</h3>
                 <p style="text-align:justify;text-justify:inter-word;">Your data is transmitted safely by using
                     encryption. We secure our website and other systems with technical and organizational measures
                     against the loss, destruction, access, change or dissemination of your data by unauthorized persons.
                 </p>
-                <br>
-                <h2>9. Your rights</h2>
+                <h3>9. Your rights</h3>
                 <p style="text-align:justify;text-justify:inter-word;">You have the following rights over the way your
-                    personal data are processed.</p>
-                <p style="text-align:justify;text-justify:inter-word;">To make a request, please let us know by sending
-                    an email to contact@hackforchange.co.</p>
-                <ul style="list-style-type:square;list-style-position: inside;">
+                    personal data are processed.To make a request, please let us know by sending
+                    an email to contact@hackforchange.co.in</p>
+                <ul style="list-style-type:square;list-style-position: inside;color: #706e6e;">
                     <li>You have the right to request a copy of the personal information we process about you and to
                         have any inaccuracies corrected.</li>
                     <li>You can ask for supplying, correcting or deleting personal information held about you.</li>
@@ -132,7 +127,7 @@
                     <li>Obtain a copy of your personal data, which you can use with another service provider</li>
                     <li>Make a complaint to a Supervisory Authority.</li>
                 </ul><br>
-                <h2>10.Changes to this privacy policy</h2>
+                <h3>10.Changes to this privacy policy</h3>
                 <p style="text-align:justify;text-justify:inter-word;">This Privacy Policy may be updated from time to
                     time. We encourage you to review this website for the latest information on our privacy practices.
                     If there are any material changes to this Privacy Policy, you will be notified by posting a notice
@@ -140,8 +135,8 @@
                     Privacy Policy, please discontinue the use of the website and the Services. This Privacy Policy has
                     been created with the help of <a href="http://livechat.com/privacy-policy-generator/?ppg"
                         target="_blank">Privacy Policy Generator</a>.</p>
-
-
+                    </div>
+                </div>
             </section>
             <aside id="sidebar">
                 <div class="sidebar__list">
