--- a/templates/HFC/terms_conditions.html
+++ b/templates/HFC/terms_conditions.html
@@ -29,38 +29,37 @@
     <div class="content-width">
         <div class="main">
             <section id="contents">
-                <h1>Website Terms and Conditions of Use</h1>
-                <br>
-                <h2>1. Terms</h2>
+                <div class="blog-single">
+                <h3>Website Terms and Conditions of Use</h3>
+                <div class="blog-single__content">
+                <h3>1. Terms</h3>
 
                 <p style="text-align:justify;text-justify:inter-word;">By accessing this Website, accessible from
-                    www.hackforchange.co, you are agreeing to be bound by these Website Terms and Conditions of Use and
+                    www.hackforchange.co.in, you are agreeing to be bound by these Website Terms and Conditions of Use and
                     agree that you are responsible for the agreement with any applicable local laws. If you disagree
                     with any of these terms, you are prohibited from accessing this site. The materials contained in
                     this Website are protected by copyright and trade mark law.</p>
-                <br>
-                <h2>2. Use License</h2>
+                <h3>2. Use License</h3>
 
                 <p style="text-align:justify;text-justify:inter-word;">Permission is granted to temporarily download one
-                    copy of the materials on HackForChange's Website for personal, non-commercial transitory viewing
+                    copy of the materials on Hack For Change's Website for personal, non-commercial transitory viewing
                     only. This is the grant of a license, not a transfer of title, and under this license you may not:
                 </p>
 
-                <ul style="list-style-type:square;list-style-position: inside;">
+                <ul style="list-style-type:square;list-style-position: inside;color: #706e6e;">
                     <li>modify or copy the materials;</li>
                     <li>use the materials for any commercial purpose or for any public display;</li>
                     <li>attempt to reverse engineer any software contained on Hack For Change's Website;</li>
                     <li>remove any copyright or other proprietary notations from the materials; or</li>
                     <li>transferring the materials to another person or "mirror" the materials on any other server.</li>
-                </ul>
+                </ul><br>
 
                 <p style="text-align:justify;text-justify:inter-word;">This will let Hack For Change to terminate upon
                     violations of any of these restrictions. Upon termination, your viewing right will also be
                     terminated and you should destroy any downloaded materials in your possession whether it is printed
                     or electronic format. These Terms of Service has been created with the help of the <a
                         href="https://www.termsofservicegenerator.net">Terms Of Service Generator</a></p>
-                <br>
-                <h2>3. Disclaimer</h2>
+                <h3>3. Disclaimer</h3>
 
                 <p style="text-align:justify;text-justify:inter-word;">All the materials on Hack For Change’s Website
                     are
@@ -68,8 +67,7 @@
                     negates all other warranties. Furthermore, Hack For Change does not make any representations
                     concerning the accuracy or reliability of the use of the materials on its Website or otherwise
                     relating to such materials or any sites linked to this Website.</p>
-                <br>
-                <h2>4. Limitations</h2>
+                <h3>4. Limitations</h3>
 
                 <p style="text-align:justify;text-justify:inter-word;">Hack For Change or its suppliers will not be hold
                     accountable for any damages that will arise with the use or inability to use the materials on
@@ -78,8 +76,7 @@
                     been notified, orally or written, of the possibility of such damage. Some jurisdiction does not
                     allow limitations on implied warranties or limitations of liability for incidental damages, these
                     limitations may not apply to you.</p>
-                <br>
-                <h2>5. Revisions and Errata</h2>
+                <h3>5. Revisions and Errata</h3>
 
                 <p style="text-align:justify;text-justify:inter-word;">The materials appearing on Hack For Change’s
                     Website may include technical, typographical, or photographic errors. Hack For Change will not
@@ -87,29 +84,26 @@
                     that any of the materials in this Website are accurate, complete, or current. Hack For Change may
                     change the materials contained on its Website at any time without notice. Hack For Change does not
                     make any commitment to update the materials.</p>
-                <br>
-                <h2>6. Links</h2>
+                <h3>6. Links</h3>
 
                 <p style="text-align:justify;text-justify:inter-word;">Hack For Change has not reviewed all of the sites
                     linked to its Website and is not responsible for the contents of any such linked site. The presence
                     of any link does not imply endorsement by Hack For Change of the site. The use of any linked website
                     is at the user’s own risk.</p>
-                <br>
-                <h2>7. Site Terms of Use Modifications</h2>
+                <h3>7. Site Terms of Use Modifications</h3>
 
                 <p style="text-align:justify;text-justify:inter-word;">Hack For Change may revise these Terms of Use for
                     its Website at any time without prior notice. By using this Website, you are agreeing to be bound by
                     the current version of these Terms and Conditions of Use.</p>
-                <br>
-                <h2>8. Your Privacy</h2>
+                <h3>8. Your Privacy</h3>
 
                 <p style="text-align:justify;text-justify:inter-word;">Please read our Privacy Policy.</p>
-                <br>
-                <h2>9. Governing Law</h2>
+                <h3>9. Governing Law</h3>
 
                 <p style="text-align:justify;text-justify:inter-word;">Any claim related to Hack For Change's Website
                     shall be governed by the laws of af without regards to its conflict of law provisions.</p>
-
+                </div>
+            </div>
             </section>
             <aside id="sidebar">
                 <div class="sidebar__list">
@@ -125,7 +119,7 @@
                 <div class="newsletter">
                     <div class="newsletter__fig"><img src="{% static 'images/news-update.png' %}" alt="Image"></div>
                     <form
-                        action="https://ctsc-india.us7.list-manage.com/subscribe/post?u=1a02ab21f5eb63b797a40e347&amp;id=72baea4f04"
+                        action="https://hackforchange.us7.list-manage.com/subscribe/post?u=d108098b91660a39ebfc4dd46&amp;id=878602ff9c"
                         method="post" target="_blank" id="mc-embedded-subscribe-form" class="newsletter__form"
                         novalidate>
                         <p class="large bold">Get Latest Updates!</p>
@@ -138,7 +132,7 @@
                 </div>
                 <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
                 <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text"
-                        name="b_1a02ab21f5eb63b797a40e347_72baea4f04" tabindex="-1" value=""></div>
+                        name="b_d108098b91660a39ebfc4dd46_878602ff9c" tabindex="-1" value=""></div>
         </div>
         </form>
     </div>
