og image url updated

--- a/templates/HFC/community.html
+++ b/templates/HFC/community.html
@@ -5,7 +5,7 @@
 <meta property="og:title" content="">
 <meta name="description" property="og:description" content="">
 <meta property="og:type" content="article">
-<meta property="og:image" content="https://www.hackforchange.co/static/images/hfc.png">
+<meta property="og:image" content="https://www.hackforchange.co.in/static/images/hfc.png">
 <meta property="og:url" content="">
 {% endblock %}
 {% block title %} Community | Hack For Change {% endblock %}
@@ -25,7 +25,7 @@
 <div id="main-wrap" class="main-wrap--pdb">
     <div class="content-width">
         <ul class="tab-sec">
-            <li class="active"><a href="#hfcCentres"><img width="27" src="{% static 'images/hfc-icon1.svg' %}"
+            <li class="active" ><a href="#hfcCentres"><img width="27" src="{% static 'images/hfc-icon1.svg' %}"
                         alt="ICON"><img width="27" src="{% static 'images/hfc-icon1-alt.svg' %}" alt="ICON"><span>HFC
                         Centres</span></a>
             </li>
