--- a/templates/HFC/problem_discription.html
+++ b/templates/HFC/problem_discription.html
@@ -5,7 +5,7 @@
 <meta property="og:title" content="{{problem.title}}">
 <meta name="description" property="og:description" content="{{problem.summary|striptags|truncatewords:20}}">
 <meta property="og:type" content="article" >    
-<meta property="og:image" content="https://www.hackforchange.co/static/images/hfc.png">
+<meta property="og:image" content="https://www.hackforchange.co.in/static/images/hfc.png">
 <meta property="og:url" content="https://hackforchange.co/problem-statements/{{problem.title_slug}}">
 {% endblock %}
 {% load static  %}
