--- a/templates/HFC/problem_statements_with_issue_area.html
+++ b/templates/HFC/problem_statements_with_issue_area.html
@@ -5,7 +5,7 @@
 <meta property="og:title" content="">
 <meta name="description" property="og:description" content="">
 <meta property="og:type" content="article">
-<meta property="og:image" content="https://www.hackforchange.co/static/images/hfc.png">
+<meta property="og:image" content="https://www.hackforchange.co.in/static/images/hfc.png">
 <meta property="og:url" content="">
 {% endblock %}
 {% block title %} Problem Statements | Hack For Change {% endblock %}
