--- a/templates/ScreeningApp/screening_error.html
+++ b/templates/ScreeningApp/screening_error.html
@@ -1,6 +1,27 @@
-{% include 'base.html'%}
-{% block body %}
-<h1 class="text-danger">Your screening link has been expired.</h1>
+{% extends 'HFC/layout.html' %}
+{% load static %}
+{% block meta_tags %}
 
-{% include 'footer.html'%}
+<meta content="" name="keywords">
+<meta property="og:title" content="">
+<meta name="description" property="og:description" content="">
+<meta property="og:type" content="article" >    
+<meta property="og:image" content="https://www.hackforchange.co.in/static/images/hfc.png">
+<meta property="og:url" content="">
+{% endblock %}
+{% block title %} Error | Hack For Change {% endblock %}
+{% block main %}
+<!-- Main starts -->
+<div class="content-width">
+        <div class="thanku-main">
+            <div class="thanku-main-img">
+                <!----<img src="{% static 'images/thank-you-img.svg' %}"> -->
+            </div>
+            <div class="thanku-heading">
+               <h2>Oops !!! Your screening link expired.<br></h2>
+               <a class="btn btn--info" href="{% url 'home' %}">Go Home</a> 
+           </div>
+        </div>
+    </div>
+<!-- Main Ends -->
 {%endblock%}
