--- a/templates/ScreeningApp/thanks.html
+++ b/templates/ScreeningApp/thanks.html
@@ -1,6 +1,28 @@
-{% include 'header.html'%}
-{% block body %}
-<h1 class="text-success">Thanks</h1>
+{% extends 'HFC/layout.html' %}
+{% load static %}
+{% block meta_tags %}
 
-{% include 'footer.html'%}
+<meta content="" name="keywords">
+<meta property="og:title" content="">
+<meta name="description" property="og:description" content="">
+<meta property="og:type" content="article" >    
+<meta property="og:image" content="https://www.hackforchange.co.in/static/images/hfc.png">
+<meta property="og:url" content="">
+{% endblock %}
+{% block title %} Thanks | Hack For Change {% endblock %}
+{% block main %}
+<!-- Main starts -->
+<div class="content-width">
+        <div class="thanku-main">
+            <div class="thanku-main-img">
+                <img src="{% static 'images/thank-you-img.svg' %}"> 
+            </div>
+            <div class="thanku-heading">
+               <h2>Thanks for attending the test.<br>
+                We will get back to you shortly!!!</h2>
+               <a class="btn btn--info" href="{% url 'home' %}">Go Home</a> 
+           </div>
+        </div>
+    </div>
+<!-- Main Ends -->
 {%endblock%}
