--- a/templates/HFC/problem_discription.html
+++ b/templates/HFC/problem_discription.html
@@ -57,9 +57,9 @@
                 <div class="sidebar__list">
                     <p>Explore problem statements across various issue areas</p>
                     <ul>
-                            {% for prob_list in all_problems %}
-                        <li><a href="{% url 'problem_statements_with_issuearea' prob_list.issue_area_slug %}" style="text-transform: capitalize;">{{prob_list.issue_area}}</a></li>
-                            {% endfor %}
+                        {% for issue_area in issue_areas %}
+                    <li><a href="{% url 'problem_statements_with_issuearea' issue_area.issue_area_slug %}">{{issue_area.issue_area}}</a></li>
+                        {% endfor %}
                     </ul>
                 </div>
                 <div class="newsletter">
