--- a/templates/HFC/problem_statements.html
+++ b/templates/HFC/problem_statements.html
@@ -32,7 +32,7 @@
                 <article class="post-blog">
                     <h4><a href="{% url 'problem_discription' prob_list.title_slug %}">{{prob_list.title}}</a></h4>
                     <div class="badge-sec"><strong>Submitted By : </strong><span class="badge badge--yellow">{% if prob_list.partner_id %}{{prob_list.partner_id}}{%endif%}</span>
-                        <strong>Issue Area : </strong><span  class="badge badge--pink" ></span><span style="text-transform: capitalize;"> {{prob_list.issue_area}}</span>
+                        <strong>Issue Area : </strong><span  class="badge badge--pink" ></span><span style="text-transform: capitalize;"> {{prob_list.issuearea}}</span>
                     </div>
                     <p>{{prob_list.summary}}</p>
                     <div class="badge-sec badge-sec__alt"><strong>Status : </strong><span class="badge">{{prob_list.status}}</span></div>
@@ -46,9 +46,8 @@
                 <div class="sidebar__list">
                     <p>Explore problem statements across various issue areas</p>
                     <ul>
-                        {% for prob_list in problems_list %}
-
-                        <li><a href="{% url 'problem_statements_with_issuearea' prob_list.issue_area_slug %}" style="text-transform: capitalize;">{{prob_list.issue_area}}</a></li>
+                        {% for issue_area in issue_areas %}
+                    <li><a href="{% url 'problem_statements_with_issuearea' issue_area.issue_area_slug %}">{{issue_area.issue_area}}</a></li>
                         {% endfor %}
                     </ul>
                 </div>
