--- a/templates/HFC/problem_statements_submit.html
+++ b/templates/HFC/problem_statements_submit.html
@@ -52,6 +52,8 @@
                     </div>
                     <div class="form-field">
                         <label for="">Issue Area</label>
+                    </div>
+                    <div style="">
                         {{form.issue_area}}
                     </div>
                     <div class="btn-outer">
@@ -63,10 +65,8 @@
                 <div class="sidebar__list">
                     <p>Explore problem statements across various issue areas</p>
                     <ul>
-                        {% for problem in all_problems %}
-                        <li><a
-                                href="{% url 'problem_statements_with_issuearea' problem.issue_area_slug %}">{{problem.issue_area}}</a>
-                        </li>
+                        {% for issue_area in issue_areas %}
+                    <li><a href="{% url 'problem_statements_with_issuearea' issue_area.issue_area_slug %}">{{issue_area.issue_area}}</a></li>
                         {% endfor %}
                     </ul>
                 </div>
