--- a/templates/HFC/projects_list.html
+++ b/templates/HFC/projects_list.html
@@ -42,10 +42,8 @@
                 <div class="sidebar__list">
                     <p>Explore Problem Statement across various issue areas</p>
                     <ul>
-                        {% for prob_list in problem_statements %}
-                        <li><a
-                                href="{% url 'problem_statements_with_issuearea' prob_list.issue_area_slug %}">{{prob_list.issue_area}}</a>
-                        </li>
+                        {% for issue_area in issue_areas %}
+                    <li><a href="{% url 'problem_statements_with_issuearea' issue_area.issue_area_slug %}">{{issue_area.issue_area}}</a></li>
                         {% endfor %}
                     </ul>
 
