--- a/templates/HFC/terms_conditions.html
+++ b/templates/HFC/terms_conditions.html
@@ -109,10 +109,8 @@
                 <div class="sidebar__list">
                     <p>Explore problem statements across various issue areas</p>
                     <ul>
-                        {% for problem in problem_statements %}
-                        <li><a
-                                href="{% url 'problem_statements_with_issuearea' problem.issue_area_slug %}" style="text-transform: capitalize;">{{problem.issue_area}}</a>
-                        </li>
+                        {% for issue_area in issue_areas %}
+                    <li><a href="{% url 'problem_statements_with_issuearea' issue_area.issue_area_slug %}">{{issue_area.issue_area}}</a></li>
                         {% endfor %}
                     </ul>
                 </div>
