--- a/templates/andablog/entry_detail.html
+++ b/templates/andablog/entry_detail.html
@@ -12,7 +12,7 @@
 {% block main %}
 {% block andablog_meta %}
 <meta name="description" content="{{ entry.title }}">
-<meta name="author" content="{{ entry.author.get_short_name }}">
+<meta name="author" content="{{ entry.author.first_name }}">
 {% endblock %}
 {% block andablog_page_title %}
 {% endblock %}
@@ -27,7 +27,7 @@
         <div class="proceedings-text" style="margin-bottom: 20px;">
             <div class="procuding-img bloge-img" id="profileImage"></div>
             <div class="foucs bloge"><span id="firstName">{% if entry.author %}{{ entry.author|authordisplay}}
-                    {%endif%}</span><br>{{entry.published_timestamp|date:"DATE_FORMAT" }}
+            {{ entry.author.last_name }}{%endif%}</span><br>{{entry.published_timestamp|date:"DATE_FORMAT" }}
             </div>
         </div>
         {% if entry.preview_image %}
