screening email changes

--- a/templates/HFC/problem_statements_with_issue_area.html
+++ b/templates/HFC/problem_statements_with_issue_area.html
@@ -18,7 +18,7 @@
             <h1>Problem Statements</h1>
             <p class="large">Explore Problem Statements submitted by various govermental, non-governmental and social
                 organizations</p>
-            <a class="btn btn--info" href="{% url 'problem_statements_submit' %}">Suggest a Problem Statement</a>
+            <a class="btn btn--info" href="{% url 'problem_statements_submit' %}">Suggest a problem statement</a>
         </div>
     </div>
 </div>
