--- a/templates/HFC/problem_statements.html
+++ b/templates/HFC/problem_statements.html
@@ -18,7 +18,7 @@
             <h1>Problem Statements</h1>
             <p class="large">Explore various problem statements suggested by organizations with deep domain expertise
             </p>
-            <a class="btn btn--info" href="{% url 'problem_statements_submit' %}">Suggest a Problem Statement</a>
+            <a class="btn btn--info" href="{% url 'problem_statements_submit' %}">Suggest a problem statement</a>
         </div>
     </div>
 </div>
