--- a/templates/HFC/screening_email.html
+++ b/templates/HFC/screening_email.html
@@ -11,8 +11,11 @@
             <div>
                 <p> Dear {{name}}, </p>
                 <p>You have been invited  by Hack For Change to attend the screening test.Please click on the below link to take the test.</p>
+                {% if debug %}
                 http://staging.hackforchange.co.in/screenings/{{screeninguuid}} <br>
-                http://dev.hackforchange.co.in:8000/screenings/{{screeninguuid}}
+                {% else %}
+                https://www.hackforchange.co.in/screenings/{{screeninguuid}}
+                {% endif %}
             </div>
     </body>
 </html>
