--- a/templates/HFC/about.html
+++ b/templates/HFC/about.html
@@ -43,7 +43,7 @@
                     <p>
                         Hack For Change is a community of developers, software engineers and other like minded
                         individuals, focused on solving <b>specific problem statements</b> proposed by social and
-                        governmental organisations, using *emerging technologies*.
+                        governmental organisations, using <b>emerging technologies</b>.
                     </p>
                     <p>
 
@@ -106,50 +106,45 @@
             </section>
 
             <section id="ourMission">
-
-
                 <div class="mission-outer">
-                    <h2 class="underline">Coders/Software Engineers</h2>
+                    <h2 class="underline">Solve real problems</h2>
                     <div class="mission__sec">
                         <div class="mission__fig"><img width="414" src="{% static 'images/our-mission-img1.jpg' %}"
                                 alt="Pic"></div>
                         <div class="mission__info">
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
-                                ut labore et dolore magna aliqua. Ut enim adminim veniam, quis nostrud exercitation
-                                ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in
-                                reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur
-                                sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id
-                                est laborum.</p>
+                            <p>
+                                Our idea is to lean on the organizations that have been in the trenches and build real
+                                solutions to the problems in an even more realistic way. Problem statements are
+                                submitted by partner organisations with deep domain expertise.
+                            </p>
                         </div>
                     </div>
                 </div>
                 <div class="mission-outer">
-                    <h2 class="underline">Coders/Software Engineers</h2>
+                    <h2 class="underline">Engage the whole community</h2>
                     <div class="mission__sec mission__sec--alt">
                         <div class="mission__fig"><img width="418" src="{% static 'images/our-mission-img2.jpg' %}"
                                 alt="Pic"></div>
                         <div class="mission__info">
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
-                                ut labore et dolore magna aliqua. Ut enim adminim veniam, quis nostrud exercitation
-                                ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in
-                                reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur
-                                sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id
-                                est laborum.</p>
+                            <p>
+                                Planned projects are executed to through community of colleges and city chapters. Only
+                                by leveraging the whole community of developers, we hope to scale our efforts to
+                                effect social change.
+                            </p>
                         </div>
                     </div>
                 </div>
                 <div class="mission-outer">
-                    <h2 class="underline">Coders/Software Engineers</h2>
+                    <h2 class="underline">Build long-lasting solutions</h2>
                     <div class="mission__sec">
                         <div class="mission__fig"><img width="387" src="{% static 'images/our-mission-img3.jpg' %}"
                                 alt="Pic"></div>
                         <div class="mission__info">
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
-                                ut labore et dolore magna aliqua. Ut enim adminim veniam, quis nostrud exercitation
-                                ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in
-                                reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur
-                                sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id
-                                est laborum.</p>
+                            <p>
+                                Unlike other free and open source efforts, our projects are designed by our core team of
+                                members, based on the problem statements. Solutions built are actively promoted and
+                                advertised to ensure continuous adoption.
+                            </p>
                         </div>
                     </div>
                 </div>
